# learncmake

./: .gitignore  README.md
01_basic/: CMakeLists.txt  hello.c
02_more/: CMakeLists.txt  tutorial.cpp
03_addlibrary/: CMakeLists.txt  tutorial.cpp
04_optional/: CMakeLists.txt  TutorialConfig.h.in
04_optional/MathFunctions/: CMakeLists.txt  custom.cpp
05_install/: CMakeLists.txt  tutorial.cpp
05_install/MathFunctions/: CMakeLists.txt  custom.h
06_test/: CMakeLists.txt  README.md  tutorial.cpp
